# propiedad_horizontal

./: .env  .env.backup  .env.dev  .env.example  .gitignore  Containerfile  README.md  db.sqlite3  pyproject.toml
migrations/models/: 0_20260426165921_init.py  0_20260619160730_init.py  0_20260627161818_init.py
src/propiedad_horizontal/app/: main.py
src/propiedad_horizontal/app/api/: auth.py  bienes.py  casa_interior_links.py  casas_apartamentos.py  domain_config.py  notifications.py  parking_assignments.py  parking_lottery.py  parking_reservations.py  parking_spots.py  permissions.py  personas.py  propiedades_horizontales.py  public.py  roles.py  torres_interiores.py  trasteos.py  user_permissions.py  users.py  vehicle_types.py  vehicles.py
src/propiedad_horizontal/app/core/: auth.py  config.py  db.py  security.py
src/propiedad_horizontal/app/models/: bien.py  casa_apartamento.py  casa_apartamento_interior_torre.py  domain_config.py  parking.py  parking_assignment.py  parking_lottery_config.py  parking_lottery_participant.py  parking_lottery_round.py  parking_reservation.py  permission.py  persona.py  propiedad_horizontal.py  resident_behavior.py  role.py  torre_interior.py  trasteo.py  trasteo_bien.py  user.py  vehicle.py  vehicle_type.py
src/propiedad_horizontal/app/schemas/: bien.py  casa_apartamento.py  casa_interior_link.py  domain_config.py  parking.py  parking_assignment.py  parking_lottery.py  parking_reservation.py  permission.py  persona.py  propiedad_horizontal.py  role.py  torre_interior.py  trasteo.py  user.py  user_permissions.py  vehicle.py  (+1 more)
(+34 files in other folders)
